# rs_run_configs

./: CMakeLists.txt  README.md  package.xml
config/: config_amortized.ini  config_mongodb_webdemo.ini  config_variations_in.ini  semantic_map_iai_kitchen_ease.yaml
descriptors/analysis_engines/: amortized.xml  amortized_record_lowlvl.xml  amortized_record_symbolic_descriptions.xml  pnp_ease.xml  pnp_ease.yaml  test_scenes.xml  variations.xml  web_demo.xml  web_demo.yaml
descriptors/typesystem/: all_types.xml
include/rs_demo_scripts/types/: all_types.h  type_definitions.h
launch/: json_prolog.launch  json_prolog_and_rosbridge.launch  pnp_ease.launch  pnp_ease_with_json_prolog.launch  pnp_ease_with_web_vis.launch  simtrack_pr2.launch  web_demo.launch
prolog/: init.pl
